# finbreak

./: .ants_review_falsepos.jsonl  .gitignore  .gitleaks.toml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  PRIVACY.md  README.md  ROADMAP.md  pyproject.toml
.ants/: project.json
.claude/: bump.json  workflow.md
.githooks/: pre-push
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: build-smoke.yml  ci.yml  windows-build.yml
assets/screenshots/: README.md
docs/: audit-allowlist.md  design.md  discovery.md  glossary.md  ideas.md  known-issues.md  security-model.md
docs/decisions/: 0001-record-architecture-decisions.md  0002-pyside6-over-pyqt6.md  0003-sqlcipher-local-only-storage.md  0004-qt-native-pdf-over-weasyprint.md  0006-transfer-detection-suggest-confirm.md  0007-self-contained-bundled-releases.md  0008-qtcharts-for-reporting.md  0009-sqlcipher-binding-package.md  0010-theme-system.md  README.md
docs/journal/: FIBR-0001.md  FIBR-0002.md  FIBR-0004.md  FIBR-0005.md  FIBR-0006.md  FIBR-0007.md  FIBR-0008.md  FIBR-0009.md  FIBR-0010.md  FIBR-0011.md  FIBR-0012.md  FIBR-0013.md  FIBR-0014.md  FIBR-0015.md  FIBR-0037.md  FIBR-0050.md  FIBR-0051.md  FIBR-0052.md  FIBR-0054.md  FIBR-0055.md  FIBR-0057.md  FIBR-0058.md  FIBR-0059.md  FIBR-0060.md  FIBR-0065.md  FIBR-0095.md  FIBR-0123.md  FIBR-0127.md  FIBR-0128.md  FIBR-0131.md  FIBR-0138.md  FIBR-0139.md  FIBR-0142.md  FIBR-0143.md  FIBR-0146.md  FIBR-0148.md
docs/specs/: FIBR-0001.md  FIBR-0003.md  FIBR-0004.md  FIBR-0005.md  FIBR-0006.md  FIBR-0007.md  FIBR-0008.md  FIBR-0009.md  FIBR-0010.md  FIBR-0011.md  FIBR-0012.md  FIBR-0013.md  FIBR-0014.md  FIBR-0015.md  FIBR-0029.md  FIBR-0030.md  FIBR-0032.md  FIBR-0033.md  FIBR-0050.md  FIBR-0051.md  FIBR-0052.md  FIBR-0054.md  FIBR-0055.md  FIBR-0059.md  FIBR-0065.md  FIBR-0083.md  FIBR-0095.md  FIBR-0096.md  FIBR-0105.md  FIBR-0123.md  FIBR-0127.md  FIBR-0128.md  FIBR-0131.md  FIBR-0138.md  FIBR-0139.md  FIBR-0142.md  FIBR-0143.md  FIBR-0146.md  FIBR-0148.md  FIBR-0153.md  (+3 more)
docs/standards/: README.md  coding.md  commits.md  dependencies.md  documentation.md  naming.md  roadmap-format.md  testing.md
packaging/flatpak/: .gitignore  README.md  flatpak-build.sh  generate-pip-sources.sh  io.github.milnet01.finbreak.yaml  python3-deps.yaml
packaging/obs/: README.md  _service  finbreak-rpmlintrc  finbreak.sh  finbreak.spec  io.github.milnet01.finbreak.desktop  io.github.milnet01.finbreak.metainfo.xml  obs-setup.sh  obs-status.sh  obs-submit.sh  vendor-wheels.sh
packaging/obs/debian/: changelog  control  install  rules
scripts/: _build-smoke-in-container.sh  build-release-appimage.sh  build-smoke.sh  build-windows-exe.py  capture_screenshots.py  ci-docker.sh  ci-local.sh  ci-setup.sh  gen-checksums.sh  gen-signing-key.py  make-icons.sh  release-linux.sh  release-windows.sh  seed_demo_vault.py  sign-release.py  windows_freeze_flags.py
src/finbreak/: __init__.py  __main__.py  _selftest.py  app.py  category_library.py  crypto.py  datetime_format.py  db.py  errors.py  migrations.py  models.py  paths.py  text.py  vault.py
src/finbreak/data/: category_library.json
src/finbreak/importers/: __init__.py  base.py  csv_importer.py  date_detect.py  ofx_importer.py  pdf_importer.py  standard_bank.py
src/finbreak/repositories/: __init__.py  accounts.py  categories.py  categorization_rules.py  import_profiles.py  recurring.py  reporting.py  settings.py  statement_periods.py  transactions.py  transfers.py
src/finbreak/services/: __init__.py  accounts.py  auth.py  backup.py  categories.py  categorization.py  import_.py  password_hint.py  pdf_export.py  recurring.py  reporting.py  statements.py  transactions.py  transfer_detection.py  unlock_throttle.py  update.py  update_fetch.py  update_installer.py  update_key.py
src/finbreak/ui/: __init__.py  _amount.py  _clipboard.py  _datetime_prefs.py  _password_hint.py  _table_state.py  _unlock_throttle.py  _update_worker.py  _widgets.py  _worker.py  account_picker.py  accounts.py  backup_export.py  backup_restore.py  backup_verify.py  categories.py  category_picker.py  charts.py  export_dialog.py  first_run.py  home.py  icons.py  import_wizard.py  main_window.py  manual_entry.py  modal.py  password_dialog.py  recurring.py  rules.py  set_hint.py  settings.py  start_over.py  statements.py  theme.py  transactions.py  transfers.py  unlock.py  update_dialog.py
tests/: conftest.py  test_smoke.py
tests/features/accounts/: spec.md  test_accounts.py
tests/features/app_shell/: spec.md  test_app_shell.py
tests/features/auto_update/: spec.md  test_auto_update.py
tests/features/backup/: spec.md  test_backup.py  test_backup_ui.py
tests/features/bundling/: spec.md  test_bundling.py
tests/features/categories/: spec.md  test_categories.py  test_picker_labels.py
tests/features/categorisation/: spec.md  test_categorisation.py
tests/features/category_library/: spec.md  test_category_library.py
tests/features/clipboard/: spec.md  test_clipboard.py
tests/features/dashboard/: spec.md  test_charts.py  test_dashboard.py
tests/features/dashboard_drilldown/: spec.md  test_dashboard_drilldown.py
tests/features/dashboard_focus/: spec.md  test_dashboard_focus.py
tests/features/datetime_display/: spec.md  test_datetime_display.py
tests/features/datetime_format/: spec.md  test_datetime_format.py
tests/features/db_performance/: spec.md  test_db_performance.py
tests/features/dialog_lifecycle/: spec.md  test_dialog_lifecycle.py
tests/features/first_run/: spec.md  test_first_run.py
tests/features/flatpak_packaging/: spec.md  test_flatpak_packaging.py
tests/features/gitignore/: spec.md  test_gitignore.py
tests/features/import_/: spec.md  test_import.py
tests/features/import_date_detect/: spec.md  test_import_date_detect.py
tests/features/obs_packaging/: spec.md  test_obs_packaging.py
tests/features/ofx_import/: spec.md  test_ofx_import.py
tests/features/password_hint/: spec.md  test_password_hint.py
tests/features/pdf_export/: spec.md  test_export_dialog.py  test_pdf_export.py
tests/features/theme/: spec.md  (+1 more)
(+34 files in other folders)
