[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "finbreak"
version = "0.1.10"
description = "Private, offline desktop app for understanding your personal finances."
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
authors = [{ name = "Anthony Schemel" }]

# Runtime dependencies. Introduced early at P01 (FIBR-0003) so the bundling
# smoke-test can prove the three NATIVE stacks freeze + travel: Qt (PySide6),
# the SQLCipher library (sqlcipher3-wheels bundles it in-wheel — no system
# libsqlcipher), and qpdf (behind pikepdf, also bundled in-wheel). Pinned
# EXACTLY per FIBR-0003 INV-4. sqlcipher3-wheels is the cross-platform fork
# (laggykiller/sqlcipher3) carrying Windows/macOS/Linux wheels of the SAME
# SQLCipher 4.12.0 engine — the FIBR-0015 swap that unblocks the Windows .exe
# (ADR-0009). The wheels' own glibc floor is the max across
# their manylinux tags — measured 2.34 (PySide6's manylinux_2_34 wheel governs)
# — but the artifact's EFFECTIVE floor is the build image's glibc: build-smoke.sh
# freezes in a python:3.12-slim-bookworm container (~2.36), whose libpython links
# it. (manylinux is ruled out as the build image — it ships a static Python
# PyInstaller can't freeze; python:*-slim provides the shared libpython.)
dependencies = [
    "PySide6==6.11.1",
    "sqlcipher3-wheels==0.5.7",
    "pikepdf==10.9.1",
    # Argon2id KDF (FIBR-0004). argon2-cffi-bindings vendors the native Argon2
    # library in-wheel, so no system lib is needed (bundling-first, ADR-0007).
    "argon2-cffi==25.1.0",
    # OFX statement import (FIBR-0008). Pulls beautifulsoup4 + native lxml + six;
    # ofxparse parses with the stdlib html.parser (lxml is loaded via bs4 but not
    # used as the parser), so no system lib is needed — the manylinux lxml wheel
    # is self-contained and travels into the FIBR-0003 bundle (spec § Dependencies).
    "ofxparse==0.21",
    # Cap beautifulsoup4 below 5.0 (FIBR-0058). ofxparse 0.21 (the latest release;
    # effectively unmaintained) calls bs4's `findAll`, deprecated since bs4 4.0 and
    # slated for removal in 5.0 — an unpinned bs4 5.x would break OFX import. bs4 is
    # only reached transitively through ofxparse, so this is a compatibility guard,
    # not a direct use. Revisit if ofxparse gains a `find_all` release or a fork.
    "beautifulsoup4>=4.9,<5",
    # PDF statement import (FIBR-0009). Native-heavy transitive tree — Pillow
    # (compiled), pypdfium2 (its PDFium binary libpdfium.so lives in the separate
    # pypdfium2_raw package), and cryptography (Rust, via pdfminer.six); all ship
    # as self-contained manylinux wheels and must travel into the FIBR-0003 bundle
    # (spec § Dependencies / D12 — build-smoke.sh --collect-all pypdfium2_raw).
    "pdfplumber==0.11.10",
    # Ed25519 verification of downloaded updates (FIBR-0054 D1). Already present
    # transitively (pdfplumber -> pdfminer.six); PROMOTED to an explicit runtime
    # dep because update.py now imports it directly — so a future pdfplumber that
    # drops pdfminer.six can't silently remove our signature gate (dependencies.md;
    # cryptography is NOT a network package, so test_INV8 runtime-deps is unaffected).
    "cryptography==49.0.0",
    # Bundled CA certificate set for the update check's HTTPS (FIBR-0054). The
    # frozen AppImage runs on any distro whose system CA store may sit at a path
    # the frozen OpenSSL wasn't built for (the v0.1.0 no-prompt bug: built on
    # Debian, run on openSUSE); update_fetch._ssl_context verifies against THIS
    # bundle instead, so TLS works host-layout-independently. Collected into the
    # bundle via build-smoke.sh --collect-all certifi. Not a network package
    # (just a .pem CA set), so test_INV8 runtime-deps is unaffected.
    "certifi>=2024.2.2",
]

# PEP 735 dev dependency group. Pinned EXACTLY (==) for a reproducible
# toolchain across machines (FIBR-0001 INV-4); refreshed to latest-stable on
# the periodic sweep (coding.md § 1.5 / global rule § 5c), not silently.
# gitleaks is intentionally absent: it is a Go binary, not a pip package, and
# is installed separately (see CLAUDE.md "Build and test").
[dependency-groups]
dev = [
    "ruff==0.15.11",
    "bandit==1.9.4",
    "pip-audit==2.10.0",
    "pytest==9.0.3",
    "pytest-qt==4.5.0",
    # Runs the [tool.mypy] config below (also run server-side by the audit).
    "mypy==2.1.0",
]
# PEP 735 build group — the freezer used only by scripts/build-smoke.sh
# (FIBR-0003). Kept out of `dev` so the everyday gate needn't install it.
build = [
    "pyinstaller==6.21.0",
]

[tool.setuptools.packages.find]
where = ["src"]

# The toolbar glyphs (FIBR-0051 D7) ship as package data so the wheel/sdist carry
# them; the PyInstaller freeze pulls them via --add-data (build-smoke.sh).
[tool.setuptools.package-data]
finbreak = ["ui/icons/*.svg", "ui/icons/*.png", "data/*.json"]

[tool.ruff]
target-version = "py312"
line-length = 88
src = ["src", "tests"]

[tool.ruff.lint]
# E/W pycodestyle, F pyflakes, I import-sort, UP pyupgrade (modern idioms,
# coding.md § 1.5), B flake8-bugbear.
select = ["E", "W", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
# Categories registered so `-m` selection and the gate's `-m "not perf"`
# exclusion work without "unknown marker" warnings (testing.md § 3.2–3.4).
markers = [
    "features: end-to-end feature-conformance tests (testing.md § 3.2)",
    "integration: cross-component tests hitting a real DB/FS/subprocess (testing.md § 3.3)",
    "perf: performance/throughput tests, excluded from the gate (testing.md § 3.4)",
    "real_library: opt out of the autouse category-library neutralise fixture so the real loader runs (FIBR-0139)",
]
# Quiet ONE known third-party warning (FIBR-0058): ofxparse 0.21 (the latest,
# unmaintained release) calls BeautifulSoup's deprecated `findAll` (~107 hits per
# run). We cannot fix a dependency's internal call, so this ignores that specific
# message only — NOT a blanket DeprecationWarning silence, so our own future
# deprecations still surface. The beautifulsoup4<5 pin (above) guards the eventual
# removal of `findAll`; drop this filter if ofxparse ships a `find_all` fix.
filterwarnings = [
    "ignore:Call to deprecated method findAll.*:DeprecationWarning",
]

[tool.bandit]
# Scan the application package only. Test trees may hold intentional
# bad-pattern fixtures for rule tests (testing.md § 3.5).
exclude_dirs = ["tests", ".venv"]

[tool.mypy]
python_version = "3.12"
files = ["src", "tests"]

# The three native stacks ship no type stubs (C-extension wheels: SQLCipher,
# qpdf-behind-pikepdf, Argon2). Ignore only their missing imports — this is the
# per-module root-cause config, not a blanket silence.
[[tool.mypy.overrides]]
module = [
    "sqlcipher3",
    "sqlcipher3.*",
    "pikepdf",
    "argon2",
    "argon2.*",
    # ofxparse ships no type stubs (FIBR-0008) — root-cause per-module ignore.
    "ofxparse",
    "ofxparse.*",
]
ignore_missing_imports = true
